sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: value i
	while (!plusPetit(i:Int, i+1:Int) :Boolean) {
                          ^